<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatterNote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_addsql">addsql</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_hint">Start here</string>
    <string name="hint_notebookname">New Notebook Name</string>
    <string name="toast_empty_notebookname">Notebook Name Cannot Empty</string>

    <string name="toast_new_note_saved">New Note saved</string>
    <string name="toast_new_note_error">Something Wrong, not saved</string>
    <string name="toast_note_updated">Note updated</string>
    <string name="toast_note_update_error">Something Wrong, not updated</string>
    <string name="toast_note_change_notsave">Note Not Save</string>

    <string name="button_save">save</string>
    <string name="button_cancell">cancell</string>
    <string name="dialog_title_notebookname">Enter New Notebook Name</string>


</resources>
