<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rootscence"
            tools:context="com.lamkansing.matternote.SingleNoteFragment">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@color/primary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="4dp"
        android:id="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"


            android:text="Large Text"
            android:id="@+id/title"
            android:layout_marginLeft="@dimen/content_left_margin"
            android:layout_gravity="left|bottom" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/frameLayout"
        android:id="@+id/lowerframelayout"
        android:paddingLeft="@dimen/list_left_right_margin"
        android:paddingRight="@dimen/list_left_right_margin"
        android:paddingTop="4dp"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="32dp"

            android:transitionName="testing"
            android:textSize="21sp"
            android:scrollbars="vertical"
            android:lineSpacingMultiplier="1.5"
            android:id="@+id/showview"

            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:lineSpacingMultiplier="1.5"
            android:hint="@string/edit_text_hint"
            android:gravity="left|top"
            android:visibility="gone"
            android:inputType="textMultiLine" >
            <requestFocus />
        </EditText>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_fab_save"
            android:visibility="gone"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_dark"
            fab:fab_colorRipple="@color/ripple" />
    </FrameLayout>
</RelativeLayout>

