<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.lamkansing.matternote.NoteListFragment">


    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listView"
        android:layout_gravity="center" />
    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabnotelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_fab_newnote"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary_dark"
        fab:fab_colorRipple="@color/ripple" />
</FrameLayout>
